Legal Plotter Works!

--- a/LegalPlotter/LegalForm.resx
+++ b/LegalPlotter/LegalForm.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="LegalDescription.Text" xml:space="preserve">
-    <value>BEGINNING AT THE POINT NORTH 0*14'54" EAST, ALONG THE LOT LINE, 269.50 FEET FROM THE SOUTHWEST CORNER OF LOT 10, BLOCK 8, HURRICANE FIELD SURVEY, AND RUNNING THENCE NORTH 0*14'54" EAST, ALONG THE LOT LINE, 211.50 FEET; THENCE NORTH 89*48'13" EAST 216.92 FEET; THENCE SOUTH O'15'20" WEST 211.50 FEET; THENCE SOUTH 89.48'13" WEST 216.89 FEET TO THE POINT OF BEGINNING.</value>
+    <value>BEGINNING AT THE POINT NORTH 0*14'54" EAST, ALONG THE LOT LINE, 269.50 FEET FROM THE SOUTHWEST CORNER OF LOT 10, BLOCK 8, HURRICANE FIELD SURVEY, AND RUNNING THENCE NORTH 0*14'54" EAST, ALONG THE LOT LINE, 211.50 FEET; THENCE NORTH 89*48'13" EAST 216.92 FEET; THENCE SOUTH 0'15'20" WEST 211.50 FEET; THENCE SOUTH 89.48'13" WEST 216.89 FEET TO THE POINT OF BEGINNING.</value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
